# portfolio-adk-agent

./: .env.example  .gitignore  P1_IMPLEMENTATION_SUMMARY.md  README.md  SETUP.md  pyproject.toml  test_basic.py
src/portfolio_agent/: __init__.py  main.py
src/portfolio_agent/agents/: __init__.py  coordinator.py  fundamental_analyst.py  news_analyst.py  report_generator.py  technical_analyst.py  ticker_resolver.py
src/portfolio_agent/config/: logging_config.py  settings.py
src/portfolio_agent/models/: __init__.py  analysis.py  reports.py  state.py  stock_data.py
src/portfolio_agent/prompts/: coordinator.jinja  fundamental_analyst.jinja  loader.py  news_analyst.jinja  report_generator.jinja  technical_analyst.jinja  ticker_resolver.jinja
src/portfolio_agent/tools/: __init__.py  cache_utils.py  financial_calc.py  fundamental_analysis.py  market_data.py  news_search.py  retry_utils.py  technical_analysis.py  ticker_resolution.py  ticker_resolver.py  yfinance_utils.py
tests/: __init__.py  test_basic.py  test_p1_fixes.py
